[metadata]
name = fiji
version = 0.0.1
author = vyoln
author_email = author@example.com
description = Fiji is an all-in one package manager for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vyoln/fiji
project_urls =
    Bug Tracker = https://github.com/vyoln/fiji/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src